# Unified-EDA-HypoTest-LM-Library

./: .gitignore  LICENSE  README.md  pyproject.toml
src/hypotest/: __init__.py  info.py
src/hypotest/analysis/: __init__.py  statistics.py  type_detector.py
src/hypotest/assumptions/: __init__.py  base.py  normality.py  variance.py
src/hypotest/config/: __init__.py  manager.py  settings.py
src/hypotest/core/: __init__.py  dataset.py  result.py
src/hypotest/effect_size/: __init__.py
src/hypotest/llm/: __init__.py  base.py  client.py  interpretor.py  schemas.py
src/hypotest/reporting/: __init__.py
src/hypotest/tests/: __init__.py  base.py  registry.py
src/hypotest/tests/parametric/: ttest.py
src/hypotest/utils/: __init__.py
